cmake_minimum_required(VERSION 3.5)
project(cvsba_simple_test)
SET(CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/lib/cmake/ /usr/lib/cmake )
#SET(CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/lib/cmake/ /usr/local/opencv3.4.3/lib/cmake )
#set(OpenCV_DIR /usr/local/opencv3.4.3/share/OpenCV)
#set(OpenCV_DIR /home/yuancaimaiyi/anaconda3/pkgs/opencv-3.4.1-py36_blas_openblas_200/share/OpenCV)
find_package(OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
#include_directories( ${OpenCV_INCLUDE_DIRS} )
find_package(cvsba REQUIRED )
#include_directories( ${cvsba_INCLUDE_DIRS} )
#include_directories( ${cvsba_INCLUDE_DIRS} "/usr/local/lib/libcvsba.so" )
add_executable(cvsba_simple_test cvsba_simple_test.cpp)
target_link_libraries(cvsba_simple_test ${OpenCV_LIBS} ${cvsba_LIBS})
